# Subscription-Manager

./: Abonament.cpp  Abonament.h  Abonament_Premium.cpp  Abonament_Premium.h  CMakeLists.txt  README.md  main.cpp
Clients/: Abonat.cpp  Abonat.h  Clienti.cpp  Clienti.h  Persoana.cpp  Persoana.h
Interactive Meniu/: Meniu_Clienti.cpp  Meniu_Clienti.h
